ProductPOOL/java/i5/cb/telos/frame/TelosParser.java
/*
The ConceptBase.cc Copyright

Copyright 1987-2022 The ConceptBase Team. All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted
provided that the following conditions are met:

   1. Redistributions of source code must retain the above copyright notice, this list of
      conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice, this list of
      conditions and the following disclaimer in the documentation and/or other materials
      provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE CONCEPTBASE TEAM ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES,
INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE CONCEPTBASE TEAM OR CONTRIBUTORS BE
LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA,
OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

The views and conclusions contained in the software and documentation are those of the authors
and should not be interpreted as representing official policies, either expressed or implied,
of the ConceptBase Team.


The ConceptBase Team is represented by

Manfred Jeusfeld, University of Skovde, 54128 Skovde, Sweden
Matthias Jarke, RWTH Aachen, Informatik 5, Ahornstr. 55, 52056 Aachen, Germany
Christoph Quix, RWTH Aachen, Informatik 5, Ahornstr. 55, 52056 Aachen, Germany


This license is a FreeBSD-style copyright license.
Legal home of the FreeBSD copyright license: http://www.freebsd.org/copyright/freebsd-license.html
*/
/* Generated By:JavaCC: Do not edit this line. TelosParser.java */
package i5.cb.telos.frame;

import com.objectspace.jgl.SList;


/**
 * parses single or multiple Telos frames or parts of Telos frames.
 * Usage: <ul>
 * <li> First, construct a TelosParser object: <br>
 *      <tt> TelosParser parser = new TelosParser( System.in ); </tt>
 * <li> Second, call the function that parses up to the nonterminal symbol
 *      you are expecting. E.g. to parse a list of Telos frames you would 
 *      write: <br>
 *      <tt> TelosFrames frames = parser.telosFrames(); </tt>
 * <li> If you want to go on parsing, just repeat calling the function
 *      corresponding to the appropiate nonterminal. For a list of all
 *      nonterminals, see <a href="file:/home/radig/java/i5/cb/telos/Telos.html">the Telos grammar</a>
 * </ul>
 * @author Christoph Radig
 */

public class TelosParser implements TelosParserConstants {

///////////////////////////////////////////////////////////////////////////////
// Parser
///////////////////////////////////////////////////////////////////////////////

/**
 * parses a list of Telos frames
 */
  final public TelosFrames telosFrames() throws ParseException {
  TelosFrames result = new TelosFrames();
  TelosFrame c;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
      case ALPHANUM:
      case NUMBER:
      case LABEL:
      case STRINGLABEL:
      case RULELABEL:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = telosFrame();
                     result.add( c );
    }
    jj_consume_token(0);
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/**
 * parses a single Telos frame
 */
  final public TelosFrame telosFrame() throws ParseException {
  ObjectName inOmega = null;
  ObjectName name = null;
  ObjectNames in = null;
  ObjectNames isa = null;
  WithSpec with = null;
    if (jj_2_1(2147483647)) {
      inOmega = objectName();
      name = objectName();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
      case IN_CML:
        in = inSpec();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ISA:
      case ISA_CML:
        isa = isaSpec();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WITH:
      case WITH_CML:
        with = withSpec();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      end();
    {if (true) return new TelosFrame( inOmega, name, in, isa, with );}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
      case ALPHANUM:
      case NUMBER:
      case LABEL:
      case STRINGLABEL:
      case RULELABEL:
        name = objectName();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IN:
        case IN_CML:
          in = inSpec();
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ISA:
        case ISA_CML:
          isa = isaSpec();
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WITH:
        case WITH_CML:
          with = withSpec();
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
        end();
    {if (true) return new TelosFrame( inOmega, name, in, isa, with );}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

   // telosFrame
  final public TelosFrame optionalTelosFrame() throws ParseException {
  TelosFrame r = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
    case ALPHANUM:
    case NUMBER:
    case LABEL:
    case STRINGLABEL:
    case RULELABEL:
      r = telosFrame();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
                        {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public ObjectNames objectNames() throws ParseException {
  ObjectNames r = new ObjectNames();
  ObjectName c;
    c = objectName();
                   r.append( c );
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
      jj_consume_token(24);
      c = objectName();
                                                           r.append( c );
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public ObjectName objectName() throws ParseException {
  ObjectName r;
  ObjectName c;
  Token s;
    r = objectName1();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECTOR2:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      s = jj_consume_token(SELECTOR2);
      c = objectName1();
                                    r = new SelectExp( r, s.image, c );
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public ObjectName objectName1() throws ParseException {
  ObjectName r;
  Label c;
  Token s;
    r = objectName2();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECTOR1:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      s = jj_consume_token(SELECTOR1);
      c = label();
                               r = new SelectExp( r, s.image, c );
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public ObjectName objectName2() throws ParseException {
  ObjectName r;
    if (jj_2_2(2147483647)) {
      r = deriveExp();
                   {if (true) return r;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALPHANUM:
      case NUMBER:
      case LABEL:
      case STRINGLABEL:
      case RULELABEL:
        r = label();
               {if (true) return r;}
        break;
      case 25:
        jj_consume_token(25);
        r = objectName();
        jj_consume_token(26);
                            {if (true) return r;}
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public DeriveExp deriveExp() throws ParseException {
  SList li = new SList();
  Label la;
  Binding b;
    la = label();
    jj_consume_token(27);
    b = binding();
                  li.add( b );
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(24);
      b = binding();
                                                     li.add( b );
    }
    jj_consume_token(28);
    {if (true) return new DeriveExp( la, li );}
    throw new Error("Missing return statement in function");
  }

  final public Binding binding() throws ParseException {
  Label l;
  ObjectName o;
    if (jj_2_3(2147483647)) {
      l = label();
      jj_consume_token(22);
      o = objectName();
                                  {if (true) return new Specialization( l, o );}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
      case ALPHANUM:
      case NUMBER:
      case LABEL:
      case STRINGLABEL:
      case RULELABEL:
        o = objectName();
        jj_consume_token(29);
        l = label();
                                  {if (true) return new Substitution( o, l );}
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public AQualifiedObjectName qualifiedObjectName() throws ParseException {
  AQualifiedObjectName r;
    if (jj_2_4(2)) {
      r = qualifiedObjectName1();
                              {if (true) return r;}
    } else if (jj_2_5(2147483647)) {
      r = objectName();
                    {if (true) return r;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
        jj_consume_token(25);
        r = qualifiedObjectName();
        jj_consume_token(26);
                                     {if (true) return r;}
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public QualifiedObjectName qualifiedObjectName1() throws ParseException {
  Qualifiers q = new Qualifiers();
  Label l;
    label_6:
    while (true) {
      l = label();
      jj_consume_token(SCOPERES);
                                        q.append( l );
      if (jj_2_6(2)) {
        ;
      } else {
        break label_6;
      }
    }
    l = label();
    {if (true) return new QualifiedObjectName( q, l );}
    throw new Error("Missing return statement in function");
  }

  final public ObjectNames inSpec() throws ParseException {
  ObjectNames o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IN:
      jj_consume_token(IN);
      break;
    case IN_CML:
      jj_consume_token(IN_CML);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    o = objectNames();
                                     {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public ObjectNames isaSpec() throws ParseException {
  ObjectNames o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ISA:
      jj_consume_token(ISA);
      break;
    case ISA_CML:
      jj_consume_token(ISA_CML);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    o = objectNames();
                                       {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public WithSpec withSpec() throws ParseException {
  WithSpec w;
    with();
    w = declarations();
                             {if (true) return w;}
    throw new Error("Missing return statement in function");
  }

  final public void with() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WITH:
      jj_consume_token(WITH);
      break;
    case WITH_CML:
      jj_consume_token(WITH_CML);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public WithSpec declarations() throws ParseException {
  WithSpec r = new WithSpec();
  Declaration d;
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ALPHANUM:
      case NUMBER:
      case LABEL:
      case STRINGLABEL:
      case RULELABEL:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_7;
      }
      d = declaration();
                      r.append( d );
    }
                                             {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Declaration declaration() throws ParseException {
  AttrCategories a;
  Properties p;
    a = attrCategories();
    p = properties();
    {if (true) return new Declaration( a, p );}
    throw new Error("Missing return statement in function");
  }

  final public AttrCategories attrCategories() throws ParseException {
  AttrCategories r = new AttrCategories();
  Label l;
    l = label();
              r.append( l );
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
      jj_consume_token(24);
      l = label();
                    r.append( l );
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Properties properties() throws ParseException {
  Properties r = new Properties();
  Property p;
    p = property();
                 r.append( p );
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_9;
      }
      jj_consume_token(23);
      p = property();
                       r.append( p );
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Property property() throws ParseException {
  Label l;
  PropertyTarget pt;
    l = label();
    jj_consume_token(22);
    pt = propertyTarget();
    {if (true) return new Property( l, pt );}
    throw new Error("Missing return statement in function");
  }

  final public PropertyTarget propertyTarget() throws ParseException {
  PropertyTarget r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 27:
      r = enumeration();
                     {if (true) return r;}
      break;
    default:
      jj_la1[22] = jj_gen;
      if (jj_2_7(2147483647)) {
        r = pathExp();
                 {if (true) return r;}
      } else if (jj_2_8(2147483647)) {
        r = complexRef();
                    {if (true) return r;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 25:
        case ALPHANUM:
        case NUMBER:
        case LABEL:
        case STRINGLABEL:
        case RULELABEL:
          r = objectName();
                    {if (true) return r;}
          break;
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Enumeration enumeration() throws ParseException {
  ObjectNames o;
    jj_consume_token(27);
    o = objectNames();
    jj_consume_token(28);
    {if (true) return new Enumeration( o );}
    throw new Error("Missing return statement in function");
  }

  final public PathExp pathExp() throws ParseException {
  AQualifiedObjectName qo;
  Token sel;
  APathTarget pt;
    qo = qualifiedObjectName();
    sel = jj_consume_token(SELECTORB);
    pt = pathTarget();
    {if (true) return new PathExp( qo, sel.image, pt );}
    throw new Error("Missing return statement in function");
  }

  final public APathTarget pathTarget() throws ParseException {
  APathTarget r;
  Restriction r2;
  Token s;
    r = restriction();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECTORB:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_10;
      }
      s = jj_consume_token(SELECTORB);
      r2 = restriction();
                                      r = new PathTarget( r, s.image, r2 );
    }
    {if (true) return r;}
    throw new Error("Missing return statement in function");
  }

  final public Restriction restriction() throws ParseException {
  Label l;
  RestrictionTarget t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALPHANUM:
    case NUMBER:
    case LABEL:
    case STRINGLABEL:
    case RULELABEL:
      l = label();
    {if (true) return new Restriction( l );}
      break;
    case 25:
      jj_consume_token(25);
      l = label();
      jj_consume_token(22);
      t = restrictionTarget();
      jj_consume_token(26);
    {if (true) return new Restriction( l, t );}
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public RestrictionTarget restrictionTarget() throws ParseException {
  RestrictionTarget r;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 27:
      r = enumeration();
                     {if (true) return r;}
      break;
    default:
      jj_la1[26] = jj_gen;
      if (jj_2_9(2)) {
        r = pathExp();
                 {if (true) return r;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 25:
        case ALPHANUM:
        case NUMBER:
        case LABEL:
        case STRINGLABEL:
        case RULELABEL:
          r = objectName();
                    {if (true) return r;}
          break;
        default:
          jj_la1[27] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public ComplexRef complexRef() throws ParseException {
  ComplexRef r;
  ObjectNames o;
  WithSpec w;
    o = objectNames();
    w = withSpec();
    end();
    {if (true) return new ComplexRef( o, w );}
    throw new Error("Missing return statement in function");
  }

  final public void end() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case END:
      jj_consume_token(END);
      break;
    case END_CML:
      jj_consume_token(END_CML);
      break;
    case END_PT:
      jj_consume_token(END_PT);
      objectName();
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public Label label() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ALPHANUM:
      t = jj_consume_token(ALPHANUM);
                  {if (true) return new Label( t.image );}
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
                {if (true) return new Label( t.image );}
      break;
    case LABEL:
      t = jj_consume_token(LABEL);
               {if (true) return new Label( t.image );}
      break;
    case STRINGLABEL:
      t = jj_consume_token(STRINGLABEL);
                     {if (true) return new Label( t.image );}
      break;
    case RULELABEL:
      t = jj_consume_token(RULELABEL);
                   {if (true) return new Label( t.image );}
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void eof() throws ParseException {
    jj_consume_token(0);
            {if (true) return;}
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_2();
    jj_save(1, xla);
    return retval;
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_3();
    jj_save(2, xla);
    return retval;
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_4();
    jj_save(3, xla);
    return retval;
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_5();
    jj_save(4, xla);
    return retval;
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_6();
    jj_save(5, xla);
    return retval;
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_7();
    jj_save(6, xla);
    return retval;
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_8();
    jj_save(7, xla);
    return retval;
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_9();
    jj_save(8, xla);
    return retval;
  }

  final private boolean jj_3_2() {
    if (jj_3R_12()) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    if (jj_scan_token(27)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }

  final private boolean jj_3R_29() {
    if (jj_scan_token(WITH_CML)) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) return false;
    return false;
  }
